@@ -1,8 +1,11 @@
 package fr.univlittoral.whattsup.controllers;
 
 import fr.univlittoral.whattsup.mappers.ChargingStationMapper;
+import fr.univlittoral.whattsup.mappers.ChargingStationQuantitiesMapper;
 import fr.univlittoral.whattsup.model.bo.ChargingStationBO;
+import fr.univlittoral.whattsup.model.bo.ChargingStationQuantityBO;
 import fr.univlittoral.whattsup.model.dto.ChargingStationDTO;
+import fr.univlittoral.whattsup.model.dto.ChargingStationQuantitiesDTO;
 import fr.univlittoral.whattsup.services.ChargingStationService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -10,7 +13,9 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Collection;
+import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/charging-stations")
@@ -52,17 +57,26 @@ public class ChargingStationController {
                 .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
-    @GetMapping("/page")
-    public ResponseEntity<Page<ChargingStationDTO>> getChargingStationsByPage(@RequestParam int page, @RequestParam int size) {
-        Page<ChargingStationBO> bos = service.getChargingStationsByPage(page, size);
+    @GetMapping
+    public ResponseEntity<Page<ChargingStationDTO>> getChargingStationsByPage(
+            @RequestParam int page,
+            @RequestParam int size,
+            @RequestParam(required = false) String sortColumn,
+            @RequestParam(required = false) String sortDirection) {
+        Page<ChargingStationBO> bos = service.getChargingStationsByPage(page, size, sortColumn, sortDirection);
         Page<ChargingStationDTO> dtos = bos.map(ChargingStationMapper::boToDto);
         return ResponseEntity.ok(dtos);
     }
 
-    @GetMapping("/all")
-    public ResponseEntity<Collection<ChargingStationDTO>> getAllChargingStations() {
-        Collection<ChargingStationBO> bos = service.getAllChargingStations();
-        Collection<ChargingStationDTO> dtos = bos.stream().map(ChargingStationMapper::boToDto).toList();
-        return ResponseEntity.ok(dtos);
+    @GetMapping("/quantities")
+    public ChargingStationQuantitiesDTO getChargingStationsQuantities(
+            @RequestParam(value = "department", required = false) String department,
+            @RequestParam(value = "includeMonths") Boolean includeMonths) {
+
+        Collection<ChargingStationQuantityBO> bos = service.findChargingStationsQuantities(department, includeMonths);
+
+        return new ChargingStationQuantitiesDTO(bos.stream()
+                .map(ChargingStationQuantitiesMapper::boToDto)
+                .collect(Collectors.toList()), department);
     }
 }
